fix: add dark mode to map & fix position of login and dark mode button for responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,7 @@ body {
   background-color: #f4f4f5;
 }
 
+
+.dark .leaflet-tile {
+  filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
+}
